# endcord-debug

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  build.py  commands.md  configuration.md  extensions.md  main.py  pyproject.toml  setup.py  todo.txt  update_version.py  update_wide_ranges.py
.github/: CONTRIBUTING.md  screenshots.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml
docs/: commands.md  configuration.md  extensions.md  keybindings.md
endcord/: acs.py  app.py  arg.py  assist_data.py  auth.py  client_properties.py  clipboard.py  color.py  config.py  debug.py  defaults.py  discord.py  downloader.py  emoji.json  formatter.py  game_detection.py  gateway.py  git.py  keybinding.py  log_queue.py  media.py  media_inline.py  message.py  parser.py  peripherals.py  perms.py  pgcurses.py  profile_manager.py  protobuf.py  protobuf_schemata.py  qr_code.py  rpc.py  search.py  terminal_qr.py  terminal_utils.py  tui.py  user_settings_pb2.py  utils.py  voice.py  wide_ranges.py  (+1 more)
endcord_cython/: color.pyx  formatter.pyx  media.pyx  pgcurses.pyx  search.pyx  tui.pyx
themes/: default.ini  irc.ini  legacy.ini  modern.ini  white.ini
tools/: build_python.sh  endcord-custom-media.sh  ensure_copyright.py  generate_emoji.py  generate_wide_ranges.py  install.sh  update_version.py  update_wide_ranges.py  user_frecency.proto  user_settings.proto
