[project]
name = "endcord"
version = "1.4.2"
description = "Feature rich Discord TUI client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.2.25; sys_platform == 'darwin'",
    "emoji>=2.15.0",
    "filetype>=1.2.0",
    "numpy>=2.4.4",
    "orjson>=3.11.8",
    "protobuf>=7.34.1",
    "psutil>=7.2.1; sys_platform != 'linux'",
    "pycryptodome>=3.23.0",
    "pynacl>=1.6.2",
    "pysocks>=1.7.1",
    "python-socks>=2.8.1",
    "pywin32>=311; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "qrcode>=8.2",
    "soundcard>=0.4.5",
    "soundfile>=0.13.1",
    "urllib3>=2.6.3",
    "websocket-client>=1.9.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
    "windows-toasts>=1.3.1; sys_platform == 'win32'",
]

[dependency-groups]
build = [
    "cython>=3.2.4",
    "nuitka[onefile]>=4.0.8",
    "pyinstaller>=6.19.0",
    "setuptools>=82.0.0",
]
media = [
    "av>=17.0.0",
    "dave-py>=0.1.2",
    "pillow>=12.2.0",
    "pynacl>=1.6.2",
]
